--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        console.error("test");
-    </script>
+    <script src="script.js"></script>
+    
+
 </body>
-</html>
+</html>g
